--- a/css/main.scss
+++ b/css/main.scss
@@ -25,8 +25,9 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    {{ site.page-width }}; //1280px;
 
-$on-palm:          900px; //600px;
 $on-laptop:        1000px; //800px
+$on-palm:          900px; //600px;
+$on-mobile:        500px;
 
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
