--- a/_includes/en/contact-form.html
+++ b/_includes/en/contact-form.html
@@ -1,28 +1,22 @@
 <form id="contactform" role="form" method="POST">
-  <div class="row">
-    <div class="col-sm-6 form-group">
-      <label for="name">Name (required)</label>
-      <input type="text" name="name" placeholder="Your Name" class="form-control" required>
-    </div>
-
-    <div class="col-sm-6 form-group">
-      <label for="_replyto">Email (required)</label>
-      <input type="email" name="_replyto" placeholder="Your Email" class="form-control" required>
-    </div>
+  <div class="form-group">
+    <label for="name">Name (required)</label>
+    <input type="text" name="name" placeholder="Your Name" class="form-control" required>
   </div>
 
-  <div class="row">
-    <div class="col-sm-6 form-group">
-      <label for="subject">Subjetc (required)</label>
-      <input type="text" name="_subject" placeholder="Subject" class="form-control" required>
-    </div>
+  <div class="form-group">
+    <label for="_replyto">Email (required)</label>
+    <input type="email" name="_replyto" placeholder="Your Email" class="form-control" required>
   </div>
 
-  <div class="row">
-    <div class="col-sm-12 form-group">
-      <label for="message">Message</label>
-      <textarea name="body" class="form-control" placeholder="You are welcome!" rows="4" width="100%"></textarea>
-    </div>
+  <div class="form-group">
+    <label for="subject">Subjetc (required)</label>
+    <input type="text" name="_subject" placeholder="Subject" class="form-control" required>
+  </div>
+
+  <div class="form-group">
+    <label for="message">Message</label>
+    <textarea name="body" class="form-control" placeholder="You are welcome!" rows="4" width="100%"></textarea>
   </div>
 
   <div>
@@ -38,7 +32,7 @@
 
   <input type="text" name="_gotcha" style="display:none" />
 
-  <input type="hidden" name="_next" value="{{ site.baseurl }}/site_en/thanks.html">
+  <input type="hidden" name="_next" value="contact-thanks.html">
 
   <div>
     <input type="submit" value="Submit">
@@ -47,7 +41,6 @@
 
 <script>
     var contactform =  document.getElementById('contactform');
-    //contactform.setAttribute('action', '//formspree.io/' + 'mzonta' + '@' + 'ieee' + '.' + 'org');
     contactform.setAttribute('action', '//formspree.io/{{ site.email }}');
     contactform.reset();
 </script>
