--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 $content-width:    {{ site.page-width }}; //1280px;
 
 $on-laptop:        1000px; //800px
-$on-palm:          900px; //600px;
+$on-palm:          600px; //900px; //600px;
 $on-mobile:        500px;
 
 @mixin media-query($device) {
