--- a/_includes/it/contact-form.html
+++ b/_includes/it/contact-form.html
@@ -32,7 +32,7 @@
 
   <input type="text" name="_gotcha" style="display:none" />
 
-  <input type="hidden" name="_next" value="/it/contact-thanks-it.html">
+  <input type="hidden" name="_next" value="{{ site.baseurl }}/site_it/thanks.html">
 
   <div>
     <input type="submit" value="Invia">
