--- a/_includes/en/contact-form.html
+++ b/_includes/en/contact-form.html
@@ -32,7 +32,7 @@
 
   <input type="text" name="_gotcha" style="display:none" />
 
-  <input type="hidden" name="_next" value="contact-thanks.html">
+  <input type="hidden" name="_next" value="{{ site.baseurl }}/site_en/thanks.html">
 
   <div>
     <input type="submit" value="Submit">
