--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/main.css">
 
-  <link rel="icon" href="/img/favicon/faviconAEX.ico"> 
+  <!-- Favicon -->
+  <link rel="icon" href="/img/favicon/faviconAEX.ico">
 
   <!-- Custom Fonts -->
   <!-- Font Awesome -->
