--- a/_includes/en/about.html
+++ b/_includes/en/about.html
@@ -5,14 +5,11 @@
     <div class="col-sm-8">
       <h2>About Company</h2><br>
       <h4>
-        AEX Engineering is the company founded by <a href="http://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
+        The company was founded in 2016 by <a href="http://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
         <br>
         The identity of the company, vision, mission and values are completely expressed by the motto "Automating user experience to enhance production quality".
-        This is the synthesis of the professioinal experince that the owner has developed in the past years of activity while he worked making
-        automation software for processing industry.
-        This expressed completely the way the company works everyday.
-        <br>
-        And these are the principles that will guide the company in the research of collaborators.
+        This is the synthesis of the professional experience of the owner.
+        This is the way the company follows everyday.
        </h4>
        <br>
       <a href="{{ site.baseurl }}#contact">
@@ -34,14 +31,14 @@
       <h2>Vision, Mission and Values</h2><br>
       <h4>
         <strong>VISION:</strong>
-        Use automation to enhance the production quality leveraging on customer culture and values.
+        Use automation to enhance the production quality leveraging on culture and values of the customer.
       </h4>
       <h4>
         <strong>MISSION:</strong>
-        Design automation systems that make a good trade-off between the constraints:
+        Design automation systems that realize a good tradeoff among the constraints:
         <ul class="fa-ul">
           <li><i class="fa-li fa fa-dot-circle-o"></i>Customer needs and experience</li>
-          <li><i class="fa-li fa fa-dot-circle-o"></i>Customer policy on process, maintenance and development</li>
+          <li><i class="fa-li fa fa-dot-circle-o"></i>Customer policies on management, maintenance and development of the production process</li>
           <li><i class="fa-li fa fa-dot-circle-o"></i>Open to interface with other systems and devices</li>
           <li><i class="fa-li fa fa-dot-circle-o"></i>Open to technology trends</li>
         </ul>
@@ -50,7 +47,7 @@
         <strong>VALUES:</strong>
         <ul class="fa-ul">
           <li><i class="fa-li fa fa-plus"></i>Work to create long-term relationship with customer and collaborators</li>
-          <li><i class="fa-li fa fa-plus"></i>Attention at the details to create good solutions and products</li>
+          <li><i class="fa-li fa fa-plus"></i>Attention at the details to create good solutions and good products</li>
         </ul>
       </h4>
     </div>
