--- a/_includes/en/team.html
+++ b/_includes/en/team.html
@@ -7,7 +7,7 @@
       <div class="thumbnail">
         <img class="my-thumbnail" style="max-width: 300px" src="/img/team/mzonta.jpg" alt="mzonta">
         <h4><strong>Massimiliano Zonta</strong></h4>
-        <p>Automation Engineer & Founder</p>
+        <p>Automation Engineer</p>
       </div>
       {% include {{ site.baseurl }}/team/mzonta.html %}
     </div>
