--- a/_includes/it/about.html
+++ b/_includes/it/about.html
@@ -3,20 +3,18 @@
   <div class="v-space" style="height: 50px"></div>
   <div class="row">
     <div class="col-sm-8">
-      <h2>About Company</h2><br>
+      <h2>Profilo</h2><br>
       <h4>
-        AEX Engineering is the company founded by <a href="http://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
+        Ditta nata nel 2016 per opera di <a href="http://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
         <br>
-        The identity of the company, vision, mission and values are completely expressed by the motto "Automating user experience to enhance production quality".
-        This is the synthesis of the professioinal experince that the owner has developed in the past years of activity while he worked making
-        automation software for processing industry.
-        This expressed completely the way the company works everyday.
-        <br>
-        And these are the principles that will guide the company in the research of collaborators.
+        L'identità, la visione, la missione e i valori che la contraddistingono sono riassunti nel motto "Automatizzare l'esperienza dei clienti per migliorare
+        la qualità della produzione".
+        Questa è la sintesi dell'esperienza professionale maturata dal titolare.
+        Questo è la linea guida che l'azienda segue quotidianamente.
        </h4>
        <br>
       <a href="{{ site.baseurl }}#contact">
-        <button class="btn btn-default btn-lg">Get in Touch</button>
+        <button class="btn btn-default btn-lg">Contattateci</button>
       </a>
     </div>
     <div class="col-sm-4">
@@ -31,26 +29,26 @@
       <span class="glyphicon glyphicon-send logo slideanim"></span>
     </div>
     <div class="col-sm-8">
-      <h2>Vision, Mission and Values</h2><br>
+      <h2>Visione, Missione e Valori</h2><br>
       <h4>
-        <strong>VISION:</strong>
-        Use automation to enhance the production quality leveraging on customer culture and values.
+        <strong>VISIONE:</strong>
+        Utilizzare l'automazione per migliorare la qualità della produzione facendo leva sulla cultura e sui valori propri del cliente.
       </h4>
       <h4>
-        <strong>MISSION:</strong>
-        Design automation systems that make a good trade-off between the constraints:
+        <strong>MISSIONE:</strong>
+        Sviluppare sistemi automatici che realizzano un buon compromesso tra i vincoli:
         <ul class="fa-ul">
-          <li><i class="fa-li fa fa-dot-circle-o"></i>Customer needs and experience</li>
-          <li><i class="fa-li fa fa-dot-circle-o"></i>Customer policy on process, maintenance and development</li>
-          <li><i class="fa-li fa fa-dot-circle-o"></i>Open to interface with other systems and devices</li>
-          <li><i class="fa-li fa fa-dot-circle-o"></i>Open to technology trends</li>
+          <li><i class="fa-li fa fa-dot-circle-o"></i>Esigenze ed esperienza del cliente</li>
+          <li><i class="fa-li fa fa-dot-circle-o"></i>Politiche del cliente in materia di gestione, manutenzione e sviluppo del processo produttivo</li>
+          <li><i class="fa-li fa fa-dot-circle-o"></i>Aperti all'interfaccia con altri sistemi e dispositivi</li>
+          <li><i class="fa-li fa fa-dot-circle-o"></i>Aperti alle tendenze tecnologiche</li>
         </ul>
       </h4>
       <h4>
-        <strong>VALUES:</strong>
+        <strong>VALORI:</strong>
         <ul class="fa-ul">
-          <li><i class="fa-li fa fa-plus"></i>Work to create long-term relationship with customer and collaborators</li>
-          <li><i class="fa-li fa fa-plus"></i>Attention at the details to create good solutions and products</li>
+          <li><i class="fa-li fa fa-plus"></i>Lavorare per creare relazioni a lungo termine con i clienti e i collaboratori</li>
+          <li><i class="fa-li fa fa-plus"></i>L'attenzione ai dettagli per creare buone soluzioni e buoni prodotti</li>
         </ul>
       </h4>
     </div>
