--- a/_layouts/en/default.html
+++ b/_layouts/en/default.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="my-jumbotron text-center">
-          <h1>Automating User Experience to enhance production quality</h1>
+          <h1>Automating user experience to enhance production quality</h1>
     </div>
 
     {% include {{ site.baseurl }}/en/about.html %}
