--- a/_layouts/it/default.html
+++ b/_layouts/it/default.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="my-jumbotron text-center">
-          <h1>Automating User Experience to enhance production quality</h1>
+          <h1>Automatizzare l'esperienza del cliente per migliorare la qualità della produzione</h1>
     </div>
 
     {% include {{ site.baseurl }}/it/about.html %}
