--- a/_includes/it/about.html
+++ b/_includes/it/about.html
@@ -7,7 +7,7 @@
       <h4>
         Ditta nata nel 2016 per opera di <a href="http://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
         <br>
-        L'identità, la visione, la missione e i valori che la contraddistingono sono riassunti nel motto "Automatizzare l'esperienza dei clienti per migliorare
+        L'identità, la visione, la missione e i valori che la contraddistingono sono riassunti nel motto "Automatizzare l'esperienza del cliente per migliorare
         la qualità della produzione".
        </h4>
        <br>
