--- a/_includes/en/about.html
+++ b/_includes/en/about.html
@@ -28,11 +28,11 @@
     <div class="col-sm-8">
       <h2>Vision, Mission and Values</h2><br>
       <h4>
-        <strong>VISION:</strong>
+        <strong>VISION</strong><br>
         Use automation to enhance the production quality leveraging on culture and values of the customer.
       </h4>
       <h4>
-        <strong>MISSION:</strong>
+        <strong>MISSION</strong><br>
         Design automation systems that realize a good tradeoff among the constraints:
         <ul class="fa-ul">
           <li><i class="fa-li fa fa-dot-circle-o"></i>Customer needs and experience</li>
@@ -42,7 +42,7 @@
         </ul>
       </h4>
       <h4>
-        <strong>VALUES:</strong>
+        <strong>VALUES</strong><br>
         <ul class="fa-ul">
           <li><i class="fa-li fa fa-plus"></i>Work to create long-term relationship with customer and collaborators</li>
           <li><i class="fa-li fa fa-plus"></i>Attention at the details to create good solutions and good products</li>
