--- a/_includes/it/about.html
+++ b/_includes/it/about.html
@@ -29,11 +29,11 @@
     <div class="col-sm-8">
       <h2>Visione, Missione e Valori</h2><br>
       <h4>
-        <strong>VISIONE:</strong>
+        <strong>VISIONE</strong><br>
         Utilizzare l'automazione per migliorare la qualità della produzione facendo leva sulla cultura e sui valori propri del cliente.
       </h4>
       <h4>
-        <strong>MISSIONE:</strong>
+        <strong>MISSIONE</strong><br>
         Sviluppare sistemi automatici che realizzano un buon compromesso tra i vincoli:
         <ul class="fa-ul">
           <li><i class="fa-li fa fa-dot-circle-o"></i>Esigenze ed esperienza del cliente</li>
@@ -43,7 +43,7 @@
         </ul>
       </h4>
       <h4>
-        <strong>VALORI:</strong>
+        <strong>VALORI</strong><br>
         <ul class="fa-ul">
           <li><i class="fa-li fa fa-plus"></i>Lavorare per creare relazioni a lungo termine con i clienti e i collaboratori</li>
           <li><i class="fa-li fa fa-plus"></i>L'attenzione ai dettagli per creare buone soluzioni e buoni prodotti</li>
