--- a/_includes/en/team.html
+++ b/_includes/en/team.html
@@ -12,6 +12,26 @@
       {% include {{ site.baseurl }}/team/mzonta.html %}
     </div>
   </div>
+  <div class="v-space" style="height: 50px"></div>
+  <h2>Partnerships</h2><br>
+  <div class="row text-center">
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img class="partners-thumbnail" style="max-width: 300px" src="/img/partnerships/Collotto/Collotto-800-300.png" alt="DMD">
+        <h4><strong>Daniele Collotto</strong></h4>
+        <p>Electrical design for industrial plants</p>
+      </div>
+      {% include {{ site.baseurl }}/partnerships/collotto.html %}
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img class="partners-thumbnail" style="max-width: 300px" src="/img/partnerships/DMD/DMD-800-300.png" alt="DMD">
+        <h4><strong>D.M.D. Elettrica</strong></h4>
+        <p>Automation - Electrical design - Wiring</p>
+      </div>
+      {% include {{ site.baseurl }}/partnerships/dmd.html %}
+    </div>
+  </div>
 </div>
 
 <div class="section-separator"></div>
