--- a/_includes/team/mzonta.html
+++ b/_includes/team/mzonta.html
@@ -23,4 +23,12 @@
       </span>
   </a>
 </li>
+<li>
+  <a href="http://www.massimilianozonta.com/" target=_blank>
+      <span class="fa-stack fa-lg social-media-list">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-share fa-stack-1x fa-inverse"></i>
+      </span>
+  </a>
+</li>
 </ul>
