--- a/_includes/it/team.html
+++ b/_includes/it/team.html
@@ -9,6 +9,12 @@
         <h4><strong>Massimiliano Zonta</strong></h4>
         <p>Ingegnere dell'Automazione</p>
       </div>
+      <div class="thumbnail legal-link">
+        <a href="http://www.profibus.com/index.php?id=6555&pxdprofibusfilter_trainingcenter=60&alfa=26" target=_blank>
+          <img class="my-pi-cert" style="max-width: 150px" src="/img/team/PI_CERT_442x254.jpg" alt="PI Certified">
+        </a>
+        <p>Certified Profinet Engineer</p>
+      </div>
       {% include {{ site.baseurl }}/team/mzonta.html %}
     </div>
   </div>
