--- a/_sass/site-style.scss
+++ b/_sass/site-style.scss
@@ -251,6 +251,11 @@ footer .glyphicon {
     border-radius: 20%;
 }
 
+.my-pi-cert {
+    padding: 0 0 15px 0;
+    border-radius: 5%;
+}
+
 .partners-thumbnail {
     padding: 0 0 15px 0;
     border-radius: 5%;
