--- a/_includes/en/team.html
+++ b/_includes/en/team.html
@@ -13,6 +13,7 @@
         <a href="http://www.profibus.com/index.php?id=6555&pxdprofibusfilter_trainingcenter=60&alfa=26" target=_blank>
           <img class="my-pi-cert" style="max-width: 150px" src="/img/team/PI_CERT_442x254.jpg" alt="PI Certified">
         </a>
+        <div class="v-space" style="height: 10px"></div>
         <p>Certified PROFINET Engineer</p>
       </div>
       {% include {{ site.baseurl }}/team/mzonta.html %}
