--- a/_includes/en/contact.html
+++ b/_includes/en/contact.html
@@ -5,7 +5,7 @@
     <div class="container">
     <div class="row">
       <div class="v-space" style="height: 50px"></div>
-      <div class="col-sm-5 text-center">
+      <div class="text-center">
         {% include {{ site.baseurl }}/en/contact-info-social.html %}
       </div>
     </div>
