--- a/_includes/en/about.html
+++ b/_includes/en/about.html
@@ -5,7 +5,7 @@
     <div class="col-sm-8">
       <h2>About Company</h2><br>
       <h4>
-        The company was founded in 2016 by <a href="http://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
+        The company was founded in 2016 by <a href="https://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
         <br>
         The identity of the company, vision, mission and values are completely expressed by the motto "Automating user experience to enhance production quality".
        </h4>
