--- a/_includes/it/about.html
+++ b/_includes/it/about.html
@@ -5,7 +5,7 @@
     <div class="col-sm-8">
       <h2>Profilo</h2><br>
       <h4>
-        Ditta nata nel 2016 per opera di <a href="http://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
+        Ditta nata nel 2016 per opera di <a href="https://www.massimilianozonta.com/" target=_blank>Massimiliano Zonta</a>.
         <br>
         L'identità, la visione, la missione e i valori che la contraddistingono sono riassunti nel motto "Automatizzare l'esperienza del cliente per migliorare
         la qualità della produzione".
