--- a/_includes/en/contact-info-social.html
+++ b/_includes/en/contact-info-social.html
@@ -60,7 +60,7 @@
       </span>
     </td>
     <td style="vertical-align: middle; text-align: left">
-      {{ site.address }}
+      Registered Office {{ site.address }}
     </td>
   </tr>
   {% endif %}
